@@ -1,5 +1,9 @@
 2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* stack.cpp: Fix naming clash.
+
+2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* expression.cpp: Fix zero inc slab bug.
 	* S_scheme_fields.cpp: Ditto.
 
